<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VotAR</string>
    
	<string name="intro">Welcome to VotAR. Press the camera button to begin, or on this text to open a help page in your browser.</string>
    <string name="photo_of_the_audience">This is an alpha (unfinished) version for testing purposes only. Use the camera button to begin.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="vote_a">a</string>
    <string name="vote_b">b</string>
    <string name="vote_c">c</string>
    <string name="vote_d">d</string>
    <string name="nowificon">No WiFi connection</string>
    <string name="wifidisabled">WiFi disabled in VotAR settings</string>
    <string name="quit_title">Quit ?</string>
    <string name="quit_message">Do you want to quit VotAR ?</string>
	<string name="title_processing_1">Processing image</string>
	<string name="title_processing_2">Processing image: </string>
	<string name="processing_1">Initializing&#x2026;</string>
	<string name="processing_2">Preprocessing surface&#x2026;</string>
	<string name="processing_3">Examining color patterns&#x2026;</string>
	<string name="processing_4">Compiling results&#x2026;</string>
	
	<string name="error_title">An unplaned issue ?</string>
	<string name="error_createphotodir">Failed to create the photo directory</string>
	<string name="error_nobitmapdata">Something has gone wrong with the photo processing (NativeAnalyze failed to return the bitmap data)</string>
	<string name="error_nocamerareturn">The photo app exited without sending back any photo to VotAR</string>
	<string name="error_nocamerareturn2">The photo app exited without sending back any photo to VotAR (2)</string>
	<string name="error_nowebserver">The internal webserver could not be started, remote display wont be available</string>
	<string name="error_photoapplaunch">Unable to find the photo application to launch</string>
	<string name="error_activityresult">The photo application repported an error</string>
	<string name="error_gallerydata">Unable to get the file path of the selected photo (data==null)</string>
	<string name="error_galleryuri">Unable to get the file path of the selected photo</string>
	<string name="error_extstorage">Unable to use the android storage space. If you have configured your device to use an external SD card for application storage, check that it is working correctly.</string>
	<string name="error_filepermission">VotAR does not have permission to open the photo file. If you opened a photo on an other application directory from the image gallery, try to copy it in your image gallery.</string>
	<string name="error_camerapermission">VotAR does not have permission to use the device camera.</string>
</resources>