<!-- 
    VotAR : Vote with Augmented reality
    Copyright (C) 2013 Stephane Poinsart <s@poinsart.com>

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".MainAct" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->


    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_of_the_audience"
            android:cropToPadding="true"
            android:gravity="left"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/introLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_margin="10dp"
            android:text="@string/intro"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

        <LinearLayout
            android:id="@+id/controlLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:minWidth="280dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/label_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_a"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/bar_a"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:max="100"
                    android:progress="10"
                    android:progressDrawable="@drawable/bar_a" />

                <TextView
                    android:id="@+id/label_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_b"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/bar_b"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:max="100"
                    android:progress="10"
                    android:progressDrawable="@drawable/bar_b" />

                <TextView
                    android:id="@+id/label_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vote_c"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/bar_c"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:max="100"
                    android:progress="10"
                    android:progressDrawable="@drawable/bar_c" />

                <TextView
                    android:id="@+id/label_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/vote_d"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/bar_d"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="10"
                    android:progressDrawable="@drawable/bar_d" />

                <TextView
                    android:id="@+id/label_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifidisabled"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:paddingTop="10dip"
                    />
                

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fullscreen_content_controls"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_overlay"
                android:gravity="bottom"
                android:orientation="vertical"
                tools:ignore="UselessParent" >

                <Button
                    android:id="@+id/buttonCamera"
                    style="android:buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera" />

                <Button
                    android:id="@+id/buttonGallery"
                    style="android:buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>